# Raftel

./: .clang-format  .gitignore  .nvimrc  .todo  CMakeLists.txt  README.md  build.py
CMake/: Warnings.cmake
raftel/: logger.cpp  logger.h  main.cpp
raftel/Rendering/API/D3D12/: D3D12.h
raftel/Rendering/API/DX11/: DX11.cpp  DX11.h
raftel/Rendering/API/DX12/: DX12.h  DX12Renderer.cpp  DX12Renderer.h
raftel/Rendering/API/DirectX/DX11/: DX11.cpp  DX11.h
raftel/Rendering/API/DirectX/DX12/: DX12.h  DX12Renderer.cpp  DX12Renderer.h
raftel/Rendering/API/DirectX/DXGI/: dxgi.cpp  dxgi.h
raftel/Rendering/API/MacOS/Metal/: Metal.h  Metal.mm
raftel/Rendering/API/Metal/: Metal.h  Metal.mm
raftel/Rendering/API/Vulkan/: vulkan.cpp  vulkan.h
raftel/Rendering/API/WebGPU/: WebGPU.h
raftel/Rendering/API/Windows/DirectX/DX11/: DX11.cpp  DX11.h
raftel/Rendering/API/Windows/DirectX/DX12/: DX12.h  DX12Renderer.cpp  DX12Renderer.h
raftel/Rendering/API/Windows/DirectX/DXGI/: dxgi.cpp  dxgi.h
raftel/Utility/Parsers/JSON/: json.cpp  json.h
raftel/Windowing/: GLFW.h  GLFWInstance.cpp  GLFWInstance.cxx  GLFWInstance.h  Window.cpp  Window.cxx  Window.h
raftel/Windowing/Surfaces/: GLSurface.cpp  GLSurface.cxx  GLSurface.h
raftel/core/: assert.h  handle.h  logger.cpp  logger.h  measure.h
raftel/core/filesystem/: filesystem.cpp  filesystem.h
raftel/core/filesystem/parsers/json/: json.cpp
raftel/core/filesystem/parsers/json/ModelFormats/: gltf.cpp  gltf.h
shaders/basic/: vert.glsl
shaders/basic/hlsl/: basic.hlsl
